# lattice_optimizer

./: .gitignore  CMakeLists.txt  README.md  data.json  lattice_data.py  lattice_plotter.py  main_plot_lattice.py
latticefiles/optimized/: HB_triangle_24_optimized_ordering_bw13_ops672.lattice  HB_triangle_28_optimized_ordering_bw12_ops1020.lattice  square_25_50005_J_optimized_ordering_bw14_ops414.lattice  triangle_12_20206_J_optimized_ordering_bw9_ops228.lattice  triangle_14_10314_J_optimized_ordering_bw9_ops286.lattice  triangle_16_J_optimized_ordering_bw12_ops360.lattice  triangle_20_10520_JJp_optimized_ordering_bw15_ops1316.lattice  triangle_20_10520_J_optimized_ordering_bw13_ops488.lattice  triangle_20_10820_J_optimized_ordering_bw9_ops460.lattice  triangle_21_10421_J_optimized_ordering_bw14_ops561.lattice  triangle_21_10821_J_optimized_ordering_bw13_ops553.lattice  triangle_24_10424_J_optimized_ordering_bw13_ops672.lattice  triangle_24_JJp_optimized_ordering_bw17_ops1784.lattice  triangle_28_JJp_optimized_ordering_bw22_ops2368.lattice  triangle_28_J_optimized_ordering_bw18_ops884.lattice  triangle_8_10208_J_optimized_ordering_bw6_ops112.lattice
latticefiles/original/: HB2_triangle_24_basic_ordering_bw23_ops2088.lattice  HB_square_25_basic_ordering_bw20_ops430.lattice  HB_triangle_28_basic_ordering_bw27_ops1140.lattice  triangle_12_20206_JJp_basic_ordering_bw11_ops390.lattice  triangle_12_20206_J_basic_ordering_bw11_ops252.lattice  triangle_14_10314_J_basic_ordering_bw13_ops338.lattice  (+13 more)
src/: main.cpp  objective.h  utils.h
src/nlohmann/: README.md
